--- a/bus-inventory-service/requirements.txt
+++ b/bus-inventory-service/requirements.txt
@@ -6,3 +6,6 @@ mysql-connector-python
 
 #for loading environment variables  #new
 python-dotenv
+httpx #for restapi call
+aio_pika #rabbitmq
+databases #rawsql
