--- a/booking-service/manifests/bus-routes-service.yaml
+++ b/booking-service/manifests/bus-routes-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bus-inventory
+  name: bus-routes
 spec:
   type: NodePort
   selector:
-    app: bus-inventory
+    app: bus-routes
   ports:
     - protocol: TCP
-      port: 8001
-      targetPort: 8001
-      nodePort: 30008
+      port: 8000
+      targetPort: 8000
+      nodePort: 30007
