--- a/external-config/mysql.properties
+++ b/external-config/mysql.properties
@@ -1,5 +1,6 @@
-MYSQL_USER='root'
-MYSQL_PASSWORD='MSService$234'
-MYSQL_SERVER='localhost'
+MYSQL_USER=root
+MYSQL_PASSWORD=MSService$234
+MYSQL_SERVER=local
 MYSQL_PORT=3306
-MYSQL_DB='bus_reservation'
+MYSQL_DB=bus_reservation
+AMQP_HOST=rabbitmq
