--- a/booking-service/manifests/bservice.yaml
+++ b/booking-service/manifests/bservice.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bus-routes
+  name: booking
 spec:
   type: NodePort
   selector:
-    app: bus-routes
+    app: booking
   ports:
     - protocol: TCP
-      port: 8000
-      targetPort: 8000
-      nodePort: 30007
+      port: 8003
+      targetPort: 8003
+      nodePort: 30010
