--- a/payment-service/manifests/service.yaml
+++ b/payment-service/manifests/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bus-routes
+  name: payment
 spec:
   type: NodePort
   selector:
-    app: bus-routes
+    app: payment
   ports:
     - protocol: TCP
-      port: 8000
-      targetPort: 8000
-      nodePort: 30007
+      port: 8002
+      targetPort: 8002
+      nodePort: 30009
