--- a/payment-service/requirements.txt
+++ b/payment-service/requirements.txt
@@ -6,4 +6,6 @@ mysql-connector-python
 
 #for loading environment variables  #new
 python-dotenv
-
+httpx #for restapi call
+aio_pika #rabbitmq
+databases #rawsql
