--- a/booking-service/manifests/bservice.yaml
+++ b/booking-service/manifests/bservice.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
 kind: Service
 metadata:
   name: booking
 spec:
-  type: NodePort
+  externalIPs:
+  - 172.31.23.18
+  type: LoadBalancer
   selector:
     app: booking
   ports:
     - protocol: TCP
       port: 8003
       targetPort: 8003
-      nodePort: 30010
