--- a/users/requirements.txt
+++ b/users/requirements.txt
@@ -1,3 +1,20 @@
+
+# fastapi==0.58.0
+# uvicorn==0.11.5
+# passlib==1.7.2
+# bcrypt==3.1.7
+
+# # for test purposes
+# flake8==3.8.3
+# ipdb==0.13.2
+# ipython==7.15.0
+fastapi
+uvicorn
+passlib
+bcrypt
+flake8
+ipdb
+ipython
 fastapi
 uvicorn
 sqlalchemy
@@ -11,4 +28,7 @@ aio_pika #rabbitmq
 databases #rawsql
 # python3-requests
 requests
+passlib
+bcrypt
+python-jose
 python-multipart
